# web9_scraping

./: Authors_info.db  README.md  authors.json  connect_db.py  create_authors_file.py  create_quoter_file.py  find_info.py  main.py  models.py  pyproject.toml  quotes.json
